# funzel

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CREDITS  README.md  funzel-dev-1.rockspec
.github/workflows/: github-actions.yml
cmake/: DownloadSwig.cmake  FindSphinx.cmake
docs/: .gitignore  CMakeLists.txt  conf.py  index.rst  requirements.txt
examples/: .gitignore  CMakeLists.txt  download_mnist.sh
examples/cpp/: CMakeLists.txt  MatrixMultiply.cpp  SolveLinearEquations.cpp
examples/csharp/MultiplyImage/: MultiplyImage.csproj  Program.cs  run.sh
examples/funzel-ls/: CMakeLists.txt  main.cpp
examples/lua/: MultiplyImage.lua  UsingTensors.lua  common.lua
examples/python/: MultiplyImage.py  common.py
libfunzel/: CMakeLists.txt  funzelConfig.cmake
libfunzel/backends/: CMakeLists.txt
libfunzel/backends/blas/: CMakeLists.txt  build_openblas.cmake
libfunzel/backends/blas/src/: BlasBackend.cpp  BlasTensor.cpp  BlasTensor.hpp  BlasTensorImpl.hpp  BlasTensorImpl.inl  BlasTensorImpl_CV.inl  BlasTensorImpl_Linalg.inl  BlasTensorImpl_NN.inl  BlasTensorLinalg.cpp  Conv2D.hpp  Pool2D.hpp
libfunzel/backends/hip/: CMakeLists.txt
libfunzel/backends/hip/src/: HIPBackend.hip.cpp  HIPBackend.hip.hpp  HIPTensor.hip.cpp  HIPTensor.hip.hpp  HIPTensorImpl.hip.hpp
libfunzel/backends/opencl/: CMakeLists.txt
libfunzel/backends/opencl/src/: OpenCLBackend.cpp  OpenCLTensor.cpp  OpenCLTensor.hpp
libfunzel/backends/opencl/src/funzel/: OpenCLBackend.hpp
libfunzel/backends/sycl/: CMakeLists.txt
libfunzel/backends/sycl/src/: SYCLBackend.cpp  SYCLTensor.cpp  SYCLTensor.hpp
libfunzel/benchmarks/: CMakeLists.txt
libfunzel/benchmarks/src/backends/: Common.hpp
libfunzel/benchmarks/src/backends/blas/: TensorBenchmark.cpp
libfunzel/benchmarks/src/backends/opencl/: TensorBenchmark.cpp
libfunzel/include/funzel/: Funzel.hpp  Image.hpp  Plot.hpp  Tensor.hpp  Type.hpp  Vector.hpp  small_vector
libfunzel/include/funzel/cv/: CV.hpp  CVBackendTensor.hpp  Image.hpp
libfunzel/include/funzel/linalg/: Linalg.hpp  LinalgBackendTensor.hpp
libfunzel/include/funzel/nn/: Conv2D.hpp  Graph.hpp  Linear.hpp  Module.hpp  NNBackendTensor.hpp  Pool2D.hpp  ReLU.hpp  Sequential.hpp  Sigmoid.hpp
libfunzel/src/: Funzel.cpp  Image.cpp  Plot.cpp  Tensor.cpp
libfunzel/src/cv/: CV.cpp  CVBackendTensor.cpp  Image.cpp
libfunzel/src/linalg/: Linalg.cpp
libfunzel/src/nn/: Conv2D.cpp  Graph.cpp  Linear.cpp  Module.cpp  NNBackendTensor.cpp  Pool2D.cpp  Sequential.cpp
libfunzel/swig/: CMakeLists.txt  CSFunzel.i  JavaFunzel.i  LuaFunzel.i  LuaTables.i  PyFunzel.i  funzel.i  funzel_cv.i  funzel_linalg.i  funzel_nn.i
libfunzel/swig/csharp/: Tensor.cs
libfunzel/tests/: BasicOpsTest.hpp  CMakeLists.txt  Common.hpp  CommonCV.hpp  CommonLinalg.hpp  CommonNN.hpp  LoadBackends.hpp.in  TestUtils.hpp
libfunzel/tests/backends/blas/: TensorTest.cpp
libfunzel/tests/backends/hip/: TensorTest.cpp
libfunzel/tests/backends/opencl/: TensorTest.cpp
libfunzel/tests/backends/sycl/: TensorTest.cpp
libfunzel/tests/csharp/: .gitignore  Program.cs  csharp.csproj.in
libfunzel/tests/libfunzel/: ComputationGraphTest.cpp  FunctionalTest.cpp  ImageTest.cpp  PlotTest.cpp  SmallVectorTest.cpp  VectorTest.cpp  main.cpp
libfunzel/tests/lua/: main.lua
libfunzel/tests/python/: main.py
scripts/: .gitignore  setup.py
scripts/funzel/: __init__.py
scripts/funzel/lib/: __init__.py
